codex-rs/tui/src/bottom_pane/chat_composer/snapshots/codex_tui__bottom_pane__chat_composer__sparkle__tests__a_fresh_astra_response_waits_for_the_pending_command_to_leave.snap
---
source: tui/src/bottom_pane/chat_composer/sparkle_tests.rs
expression: "format!(\"command during startup:\\n{}\\n\\nafter command:\\n{}\", text(&pending),\ntext(&completed))"
---
command during startup:

› /status

  /status      显 示 当 前 会 话 配 置 和  Token 用 量
  /statusline  配 置 状 态 栏 中 显 示 的 项 目

after command:
                            ⠈     ⢀     ⠁                 ⠂
›⠁Ask Codex to do anything         ⠈      ⠁
       ⢀            ⠠     ⠄         ⠠          ⢀    ⠠     ⡀
  ? 查 看 快 捷 键                                                  上 下 文 剩 余  100%
