codex-rs/tui/src/bottom_pane/chat_composer/snapshots/codex_tui__bottom_pane__chat_composer__sparkle__tests__history_search_acceptance_and_cancellation_update_sparkles_before_rendering.snap
---
source: tui/src/bottom_pane/chat_composer/sparkle_tests.rs
expression: "snapshots.join(\"\\n\\n\")"
---
accept:

› Ask Codex to do anything

  ? 查 看 快 捷 键                                                  上 下 文 剩 余  100%

escape:
                            ⠈     ⢀     ⠁                 ⠂
›⠁Ask Codex to do anything         ⠈      ⠁
       ⢀            ⠠     ⠄         ⠠          ⢀    ⠠     ⡀
  ? 查 看 快 捷 键                                                  上 下 文 剩 余  100%
