codex-rs/tui/src/bottom_pane/chat_composer/snapshots/codex_tui__bottom_pane__chat_composer__sparkle__tests__sparkle_matches_the_original_starfield_and_protects_the_placeholder_and_cursor.snap
---
source: tui/src/bottom_pane/chat_composer/sparkle_tests.rs
expression: "snapshots.join(\"\\n\\n\")"
---
40 columns, cursor Some((2, 1))
                            ⠈     ⢀
›⠁Ask Codex to do anything         ⠈
       ⢀            ⠠     ⠄         ⠠
  ? 查 看 快 捷 键          上 下 文 剩 余  100%
first input:

› x

                       上 下 文 剩 余  100%

80 columns, cursor Some((2, 1))
                            ⠈     ⢀     ⠁                 ⠂
›⠁Ask Codex to do anything         ⠈      ⠁
       ⢀            ⠠     ⠄         ⠠          ⢀    ⠠     ⡀
  ? 查 看 快 捷 键                                                  上 下 文 剩 余  100%
first input:

› x

                                                               上 下 文 剩 余  100%
